--- a/templates/questionnaire/delete.template.question.html
+++ b/templates/questionnaire/delete.template.question.html
@@ -7,7 +7,7 @@
     <div class="alert alert-danger" role="alert">
         <strong>Delete response type</strong><br/>
         <p>
-            Are you sure you want to delete the response type "{{questionTypeToDelete.name_EN}} / {{questionTypeToDelete.name_FR}}" ?
+            Are you sure you want to delete the response type "{{templateQuestionToDelete.name_EN}} / {{templateQuestionToDelete.name_FR}}" ?
         </p>
     </div>
     <div class="row">
