--- a/templates/questionnaire/questionnaire-main-menu.html
+++ b/templates/questionnaire/questionnaire-main-menu.html
@@ -93,7 +93,7 @@
 						</div>
 						<!-- View Questions Types -->
 						<div class="col-xs-12 col-sm-6 col-md-4">
-							<div class="panel-container animated" ng-class="{pulse: hoverQuestionType}" ng-mouseenter="hoverQuestionType=true" ng-mouseleave="hoverQuestionType=false" style="cursor:pointer;" ng-click="goToQuestionType()">
+							<div class="panel-container animated" ng-class="{pulse: hoverTemplateQuestion}" ng-mouseenter="hoverTemplateQuestion=true" ng-mouseleave="hoverTemplateQuestion=false" style="cursor:pointer;" ng-click="goToTemplateQuestion()">
 								<div class="panel-info">
 									<div class="panel-content">
 										<div class="icon-home clearfix">
