--- a/templates/questionnaire/edit.template.question.html
+++ b/templates/questionnaire/edit.template.question.html
@@ -5,7 +5,7 @@
     </div>
     <div class="modal-buttons col-xs-12">
         <span>
-            <form method="post" ng-submit="updateQuestionType()">
+            <form method="post" ng-submit="updateTemplateQuestion()">
                 <input class="btn btn-primary submit" type="submit" value="Save Changes" ng-disabled="!checkForm()" />
                 <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="Cancel" />
             </form>
@@ -25,19 +25,19 @@
                 <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
                     <div class="input-group">
                         <span class="input-group-addon">EN</span>
-                        <input type="text" class="form-control" ng-model="questionType.name_EN" placeholder="English Title" ng-change="setChangesMade()"  />
+                        <input type="text" class="form-control" ng-model="templateQuestion.name_EN" placeholder="English Title" ng-change="setChangesMade()"  />
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
                     <div class="input-group">
                         <span class="input-group-addon">FR</span>
-                        <input type="text" class="form-control" ng-model="questionType.name_FR" placeholder="Titre Français" ng-change="setChangesMade()"  />
+                        <input type="text" class="form-control" ng-model="templateQuestion.name_FR" placeholder="Titre Français" ng-change="setChangesMade()"  />
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-6 col-md-6" style="margin-bottom: 20px;">
-                    <label style="font-size: 20px;">Make this answer type private: <input ng-change="setChangesMade()" type="checkbox" ng-model="questionType.private" ng-disabled="!questionType.isOwner || questionType.readOnly"  ng-true-value="true" ng-false-value="false"></label>
+                    <label style="font-size: 20px;">Make this answer type private: <input ng-change="setChangesMade()" type="checkbox" ng-model="templateQuestion.private" ng-disabled="!templateQuestion.isOwner || templateQuestion.readOnly"  ng-true-value="true" ng-false-value="false"></label>
                 </div>
             </div>
         </div>
@@ -50,18 +50,18 @@
                 </div>
             </uib-accordion-heading>
             <div class="alert alert-info" role="alert">
-                <strong>{{questionType.category_EN}} / {{questionType.category_FR}}</strong>
+                <strong>{{templateQuestion.category_EN}} / {{templateQuestion.category_FR}}</strong>
             </div>
 
-            <div ng-hide="questionType.readOnly">
+            <div ng-hide="templateQuestion.readOnly">
                 <!-- Edit text box options -->
-                <div class="col-xs-12 col-md-8" ng-if="questionType.typeId === '3'">
+                <div class="col-xs-12 col-md-8" ng-if="templateQuestion.typeId === '3'">
                     <p>No option.</p>
                 </div>
 
                 <!-- Edit radio button options -->
-                <div class="col-xs-12 col-md-8" ng-if="questionType.typeId === '4' || questionType.typeId === '1'">
-                    <div class="input-group" style="margin-top:5px; margin-bottom:5px;" ng-repeat="option in questionType.subOptions">
+                <div class="col-xs-12 col-md-8" ng-if="templateQuestion.typeId === '4' || templateQuestion.typeId === '1'">
+                    <div class="input-group" style="margin-top:5px; margin-bottom:5px;" ng-repeat="option in templateQuestion.subOptions">
                         <input class="form-control" style="width:20%" ng-change="setChangesMade();orderPreview();" type="number" placeholder="Position" ng-model="option.order"  />
                         <input class="form-control" style="width:40%" ng-change="setChangesMade();" type="text" placeholder="Text (EN)" ng-model="option.description_EN"  />
                         <input class="form-control" style="width:40%" ng-change="setChangesMade();" type="text" placeholder="Text (FR)" ng-model="option.description_FR"  />
@@ -71,7 +71,7 @@
                 </div>
 
                 <!-- Edit Sliders options -->
-                <div class="col-xs-12 col-md-8" ng-if="questionType.typeId === '2'">
+                <div class="col-xs-12 col-md-8" ng-if="templateQuestion.typeId === '2'">
                     <div class="input-group" style="margin-top:10px; margin-bottom:10px;width:100%;">
                         <div style="display: block; float: left;width: 22%;">
                             &nbsp;
@@ -83,71 +83,71 @@
                     </div>
                     <div class="input-group" style="margin-top:10px; margin-bottom:10px;width:100%;">
                         <span class="input-group-addon">&nbsp;Minimum settings</span>
-                        <input class="form-control" style="width:12%;" ng-change="setChangesMade();updateSlider();" min="1" type="number" placeholder="Minimum value" ng-model="questionType.options.minValue"  />
-                        <input class="form-control" style="width:44%" ng-change="setChangesMade();updateSlider();" type="text" ng-model="questionType.options.minCaption_EN" placeholder="Minimum caption (EN)"  />
-                        <input class="form-control" style="width:44%" ng-change="setChangesMade();updateSlider();" type="text" ng-model="questionType.options.minCaption_FR" placeholder="Minimum caption (FR)"  />
+                        <input class="form-control" style="width:12%;" ng-change="setChangesMade();updateSlider();" min="1" type="number" placeholder="Minimum value" ng-model="templateQuestion.options.minValue"  />
+                        <input class="form-control" style="width:44%" ng-change="setChangesMade();updateSlider();" type="text" ng-model="templateQuestion.options.minCaption_EN" placeholder="Minimum caption (EN)"  />
+                        <input class="form-control" style="width:44%" ng-change="setChangesMade();updateSlider();" type="text" ng-model="templateQuestion.options.minCaption_FR" placeholder="Minimum caption (FR)"  />
                     </div>
                     <div class="input-group" style="margin-top:10px; margin-bottom:10px;width:100%;">
                         <span class="input-group-addon">Maximum settings</span>
-                        <input class="form-control" style="width:12%" ng-change="setChangesMade();updateSlider();" min="1" type="number" placeholder="Maximum value" ng-model="questionType.options.maxValue"  />
-                        <input class="form-control" style="width:44%" ng-change="setChangesMade();updateSlider();" type="text" ng-model="questionType.options.maxCaption_EN" placeholder="Maximum caption (EN)"  />
-                        <input class="form-control" style="width:44%" ng-change="setChangesMade();updateSlider();" type="text" ng-model="questionType.options.maxCaption_FR" placeholder="Maximum caption (FR)"  />
+                        <input class="form-control" style="width:12%" ng-change="setChangesMade();updateSlider();" min="1" type="number" placeholder="Maximum value" ng-model="templateQuestion.options.maxValue"  />
+                        <input class="form-control" style="width:44%" ng-change="setChangesMade();updateSlider();" type="text" ng-model="templateQuestion.options.maxCaption_EN" placeholder="Maximum caption (EN)"  />
+                        <input class="form-control" style="width:44%" ng-change="setChangesMade();updateSlider();" type="text" ng-model="templateQuestion.options.maxCaption_FR" placeholder="Maximum caption (FR)"  />
                     </div>
                     <div class="input-group" style="margin-top:10px; margin-bottom:10px;width:100%;">
                         <span class="input-group-addon">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Increment&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-                        <input class="form-control" style="width:12%" ng-change="setChangesMade();updateSlider();" type="number" min="1" placeholder="Increment step" ng-model="questionType.options.increment"  />
+                        <input class="form-control" style="width:12%" ng-change="setChangesMade();updateSlider();" type="number" min="1" placeholder="Increment step" ng-model="templateQuestion.options.increment"  />
                     </div>
                 </div>
             </div>
 
             <!-- Preview -->
-            <div ng-class="questionType.readOnly ? 'col-xs-12' : 'col-md-4'" style="text-align:right">
+            <div ng-class="templateQuestion.readOnly ? 'col-xs-12' : 'col-md-4'" style="text-align:right">
                 <div style="height:10px; border-bottom:1px solid #6f5499; text-align:center; margin-bottom:10px;">
                     <span style="background-color: #fff; padding: 0 10px; font-size:16px;">Question preview</span>
                 </div>
                 <div class="previewContainer" style="max-height: 300px;height:100%;">
                     <div class="previewContent" ng-show="validSlider">
                         <div class="row">
-                            <div ng-class="questionType.readOnly ? 'col-lg-6' : 'col-lg-12'">
+                            <div ng-class="templateQuestion.readOnly ? 'col-lg-6' : 'col-lg-12'">
                                 <h4 style="margin-top:10px;">English</h4>
-                                <p style="margin-top:10px; margin-bottom:10px"; ng-bind-html="questionType.name_EN"></p>
-                                <div ng-if="questionType.typeId === '1'">
-                                    <div ng-repeat="option in questionType.subOptions">
+                                <p style="margin-top:10px; margin-bottom:10px"; ng-bind-html="templateQuestion.name_EN"></p>
+                                <div ng-if="templateQuestion.typeId === '1'">
+                                    <div ng-repeat="option in templateQuestion.subOptions">
                                         <label><input type="checkbox" disabled> {{option.description_EN}}</label>
                                     </div>
                                 </div>
-                                <div ng-if="questionType.typeId == '3'">
+                                <div ng-if="templateQuestion.typeId == '3'">
                                     <textarea rows="3" cols="30" disabled>Type in your answer.</textarea>
                                 </div>
-                                <div ng-if="questionType.typeId == '2'">
+                                <div ng-if="templateQuestion.typeId == '2'">
                                     <div ng-repeat="option in preview">
                                         <label><input type="radio" disabled> {{option.description_EN}}</label>
                                     </div>
                                 </div>
-                                <div ng-if="questionType.typeId == '4'">
-                                    <div ng-repeat="option in questionType.subOptions">
+                                <div ng-if="templateQuestion.typeId == '4'">
+                                    <div ng-repeat="option in templateQuestion.subOptions">
                                         <label><input type="radio" disabled> {{option.description_EN}}</label>
                                     </div>
                                 </div>
                             </div>
-                            <div ng-class="questionType.readOnly ? 'col-lg-6' : 'col-lg-12'">
+                            <div ng-class="templateQuestion.readOnly ? 'col-lg-6' : 'col-lg-12'">
                                 <h4 style="margin-top:10px;">Français</h4>
-                                <p style="margin-top:10px; margin-bottom:10px"; ng-bind-html="questionType.name_FR"></p>
-                                <div ng-if="questionType.typeId === '1'">
-                                    <div ng-repeat="option in questionType.subOptions">
+                                <p style="margin-top:10px; margin-bottom:10px"; ng-bind-html="templateQuestion.name_FR"></p>
+                                <div ng-if="templateQuestion.typeId === '1'">
+                                    <div ng-repeat="option in templateQuestion.subOptions">
                                         <label><input type="checkbox" disabled> {{option.description_FR}}</label>
                                     </div>
                                 </div>
-                                <div ng-if="questionType.typeId == '2'">
+                                <div ng-if="templateQuestion.typeId == '2'">
                                     <div ng-repeat="option in preview">
                                         <label><input type="radio" disabled> {{option.description_FR}}</label>
                                     </div>
                                 </div>
-                                <div ng-if="questionType.typeId == '3'">
+                                <div ng-if="templateQuestion.typeId == '3'">
                                     <textarea rows="3" cols="30" disabled>Entrez votre réponse.</textarea>
                                 </div>
-                                <div ng-if="questionType.typeId == '4'">
-                                    <div ng-repeat="option in questionType.subOptions">
+                                <div ng-if="templateQuestion.typeId == '4'">
+                                    <div ng-repeat="option in templateQuestion.subOptions">
                                         <label><input type="radio" disabled> {{option.description_FR}}</label>
                                     </div>
                                 </div>
