--- a/templates/questionnaire/add.template.question.html
+++ b/templates/questionnaire/add.template.question.html
@@ -213,7 +213,7 @@
                             <div class="col-xs-12">
                                 <p style="margin-bottom: 5px;">
                                     <span style="color:#d9534f"><strong>Required field:</strong></span>
-                                    Please assign the answer type name in both english and in french.
+                                    Please assign the response type name in both english and in french.
                                 </p>
                             </div>
                         </div>
