Creation of the files for the Publication Tools

--- a/templates/questionnaire/questionnaire-main-menu.html
+++ b/templates/questionnaire/questionnaire-main-menu.html
@@ -91,7 +91,7 @@
 								</div>
 							</div>
 						</div>
-						<!-- View Questions Types -->
+						<!-- View Questions Templates -->
 						<div class="col-xs-12 col-sm-6 col-md-4">
 							<div class="panel-container animated" ng-class="{pulse: hoverTemplateQuestion}" ng-mouseenter="hoverTemplateQuestion=true" ng-mouseleave="hoverTemplateQuestion=false" style="cursor:pointer;" ng-click="goToTemplateQuestion()">
 								<div class="panel-info">
@@ -104,6 +104,24 @@
 										</div>
 										<div class="panel-description">
 											<p>Create, view, update and delete response types.</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- View Publication Tools -->
+						<div class="col-xs-12 col-sm-6 col-md-4">
+							<div class="panel-container animated" ng-class="{pulse: hoverPublicationTool}" ng-mouseenter="hoverPublicationTool=true" ng-mouseleave="hoverPublicationTool=false" style="cursor:pointer;" ng-click="goToPublicationTool()">
+								<div class="panel-info">
+									<div class="panel-content">
+										<div class="icon-home clearfix">
+											<span class="fa fa-cloud-upload fa-sm" aria-hidden="true"></span>
+										</div>
+										<div class="panel-title">
+											<h1>Publication Tools</h1>
+										</div>
+										<div class="panel-description">
+											<p>Publish and send questionnaires to patients.</p>
 										</div>
 									</div>
 								</div>
