--- a/templates/questionnaire/questionnaire-side-menu.html
+++ b/templates/questionnaire/questionnaire-side-menu.html
@@ -70,13 +70,24 @@
                 </div>
             </div>
         </div>
-        <!-- Questions Types -->
+        <!-- Questions Templates -->
         <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
             <div class="panel-container animated" ng-class="{pulse: hoverTemplateQuestion, active: currentPage == 'questionnaire/template-question'}" ng-mouseenter="hoverTemplateQuestion=true" ng-mouseleave="hoverTemplateQuestion=false" style="cursor:pointer;" ng-click="goToTemplateQuestion()">
                 <div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire/template-question'}">
                     <div class="panel-content">
                         <span style="font-size: 23px;vertical-align:middle" class="fa fa-question-circle-o" aria-hidden="true"></span>
                         <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>Response Types</strong></h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Publication Tools -->
+        <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
+            <div class="panel-container animated" ng-class="{pulse: hoverPublicationTool, active: currentPage == 'questionnaire/publication-tool'}" ng-mouseenter="hoverPublicationTool=true" ng-mouseleave="hoverPublicationTool=false" style="cursor:pointer;" ng-click="goToPublicationTool()">
+                <div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire/publication-tool'}">
+                    <div class="panel-content">
+                        <span style="font-size: 23px;vertical-align:middle" class="fa fa-cloud-upload" aria-hidden="true"></span>
+                        <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>Publication Tools</strong></h6>
                     </div>
                 </div>
             </div>
