Creation of the files for the Publication Tools

--- a/templates/questionnaire/edit.template.question.html
+++ b/templates/questionnaire/edit.template.question.html
@@ -103,7 +103,7 @@
             <!-- Preview -->
             <div ng-class="templateQuestion.readOnly ? 'col-xs-12' : 'col-md-4'" style="text-align:right">
                 <div style="height:10px; border-bottom:1px solid #6f5499; text-align:center; margin-bottom:10px;">
-                    <span style="background-color: #fff; padding: 0 10px; font-size:16px;">Question preview</span>
+                    <span style="background-color: #fff; padding: 0 10px; font-size:16px;">Template preview</span>
                 </div>
                 <div class="previewContainer" style="max-height: 300px;height:100%;">
                     <div class="previewContent" ng-show="validSlider">
