--- a/templates/questionnaire/publication.tool.html
+++ b/templates/questionnaire/publication.tool.html
@@ -22,7 +22,7 @@
 					<div class="row clearfix operations">
 						<div class="save-add col-xs-12 col-sm-6 col-md-8">
               				<!-- Add button -->
-							<a style="width:100px;margin-right:20px;" href="" ng-click="goToAddQuestion()" class="btn btn-md btn-outline item-button">
+							<a style="width:100px;margin-right:20px;" href="" ng-click="goToAddPublicationTool()" class="btn btn-md btn-outline item-button">
 								<span style="font-size: 17px;" class="fa fa-plus"></span>
 								<span style="font-size: 20px;"><strong>Add</strong></span>
 							</a>
