Changed the path for config classes

--- a/templates/questionnaire/cannot.delete.question.html
+++ b/templates/questionnaire/cannot.delete.question.html
@@ -7,7 +7,7 @@
     <div class="alert alert-danger" role="alert">
         <strong>Warning</strong><br>
         <p>
-            This question has being sent already to a patient and cannot be deleted.
+            This question has being published already and cannot be deleted.
         </p>
     </div>
     <div class="row">
