--- a/templates/questionnaire/publication.tool.html
+++ b/templates/questionnaire/publication.tool.html
@@ -11,7 +11,7 @@
 					<div class="row main-title">
 						<!-- Page title -->
 						<div class="col-xs-12 col-md-6 title-content">
-							<span class="fa fa-pencil"></span>
+							<span class="fa fa-cloud-upload"></span>
 							<h1><strong>Publication Tools</strong></h1>
 						</div>
 						<!-- Breadcrumbs -->
@@ -23,7 +23,7 @@
 					<div class="row clearfix operations">
 						<div class="save-add col-xs-12 col-sm-6 col-md-8">
 							<!-- Add button -->
-							<a style="width:100px;margin-right:20px;" href="" ng-click="goToAddQuestionnaire()" class="btn btn-md btn-outline item-button">
+							<a style="width:100px;margin-right:20px;" href="" ng-click="goToAddPublicationTool()" class="btn btn-md btn-outline item-button">
 								<span style="font-size: 17px;" class="fa fa-plus"></span>
 								<span style="font-size: 20px;"><strong>Add</strong></span>
 							</a>
@@ -52,7 +52,6 @@
 						</div>
 					</div>
 				</div>
-
 			</div>
 		</div>
 	</div>
