--- a/templates/questionnaire/add.questionnaire.html
+++ b/templates/questionnaire/add.questionnaire.html
@@ -9,8 +9,7 @@
                         <div class="row side-logo" ng-click="goToHome()">
                             <div class="col-md-12">
                                 <div class="logo">
-                                    <img style="margin-top: -20px;" class="animated rotateIn"
-                                         src="images/opal_logo_transparent_purple.png" height="130" width="130">
+                                    <img style="margin-top: -20px;" class="animated rotateIn" src="images/opal_logo_transparent_purple.png" height="130" width="130">
                                 </div>
                                 <h1 class="animated fadeIn">opal <strong>ADMIN</strong></h1>
                             </div>
