--- a/templates/questionnaire/cannot.delete.questionnaire.html
+++ b/templates/questionnaire/cannot.delete.questionnaire.html
@@ -7,7 +7,7 @@
     <div class="alert alert-danger" role="alert">
         <strong>Warning</strong><br>
         <p>
-            This questionnaire has being sent already to a patient and cannot be deleted.
+            This questionnaire has being published already and cannot be deleted.
         </p>
     </div>
     <div class="row">
