--- a/templates/questionnaire/edit.question.html
+++ b/templates/questionnaire/edit.question.html
@@ -11,7 +11,7 @@
             <span class="text-danger fa fa-lock"></span>
             View Question
         </h2>
-        <p class="text-danger">This question has being already sent to patients.</p>
+        <p class="text-danger">This question has being already published.</p>
     </div>
     <div class="modal-buttons col-xs-12">
   <span>
