--- a/templates/questionnaire/edit.questionnaire.html
+++ b/templates/questionnaire/edit.questionnaire.html
@@ -9,7 +9,7 @@
             <span class="text-danger fa fa-lock"></span>
             View Questionnaire
         </h2>
-        <p class="text-danger">This questionnaire has being already sent to patients.</p>
+        <p class="text-danger">This questionnaire has being already published.</p>
     </div>
     <p class="modal-title-caption col-xs-12">
         {{questionnaire.title_EN}} / {{questionnaire.title_FR}}
