Hiding completed questionnaires for now since it's not coded yet.

--- a/templates/questionnaire/questionnaire-main-menu.html
+++ b/templates/questionnaire/questionnaire-main-menu.html
@@ -74,7 +74,7 @@
 						</div>
 
 						<!-- View Completed Questionnaire -->
-						<div class="col-xs-12 col-sm-6 col-md-4">
+<!--						<div class="col-xs-12 col-sm-6 col-md-4">
 							<div class="panel-container animated" ng-class="{pulse: hoverCompletedQuestionnaire}" ng-mouseenter="hoverCompletedQuestionnaire=true" ng-mouseleave="hoverCompletedQuestionnaire=false" style="cursor:pointer;" ng-click="goToQuestionnaireCompleted()">
 								<div class="panel-info">
 									<div class="panel-content">
@@ -90,7 +90,7 @@
 									</div>
 								</div>
 							</div>
-						</div>
+						</div>-->
 						<!-- View Questions Templates -->
 						<div class="col-xs-12 col-sm-6 col-md-4">
 							<div class="panel-container animated" ng-class="{pulse: hoverTemplateQuestion}" ng-mouseenter="hoverTemplateQuestion=true" ng-mouseleave="hoverTemplateQuestion=false" style="cursor:pointer;" ng-click="goToTemplateQuestion()">
