Added warning message and fixed text field.

--- a/templates/questionnaire/add.publication.tool.html
+++ b/templates/questionnaire/add.publication.tool.html
@@ -470,7 +470,7 @@
                         <div class="row animated" ng-class="{fadeInUp: questionnaireSection.show}" ng-if="questionnaireSection.show">
                             <div class="col-xs-12 col-md-8">
                                 <div class="panel" ng-class="newQuestionnaireToPublish.questionnaireId ? 'panel-success': 'panel-danger'">
-                                    <div class="panel-heading"><strong>Response Type</strong>
+                                    <div class="panel-heading"><strong>List of questionnaires</strong>
                                         <span ng-hide="newQuestionnaireToPublish.questionnaireId" style="float:right"><em>Incomplete</em></span>
                                         <span ng-show="newQuestionnaireToPublish.questionnaireId" style="float:right"><em>Complete</em></span>
                                     </div>
