--- a/templates/questionnaire/questionnaire-main-menu.html
+++ b/templates/questionnaire/questionnaire-main-menu.html
@@ -16,11 +16,11 @@
 						<!-- Page title -->
 						<div class="col-xs-12 col-md-9 title-content">
 							<span class="fa fa-pencil-square-o"></span>
-							<h1><strong>Questionnaires</strong></h1>
+							<h1><strong>{{'QUESTIONNAIRE_MODULE.DASHBOARD.TITLE'|translate}}</strong></h1>
 						</div>
 						<!-- Breadcrumbs -->
 						<div class="col-md-3 title-breadcrumbs">
-							<span><a ui-sref="home">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Questionnaires</strong></span>
+							<span><a ui-sref="home">{{'BREADCRUMBS.HOME'|translate}}</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>{{'QUESTIONNAIRE_MODULE.DASHBOARD.TITLE'|translate}}</strong></span>
 						</div>
 					</div>
 					<!-- Panel Menu -->
@@ -29,7 +29,7 @@
 							<div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                 				<span style="background-color:#e6edfa; padding: 0 10px;">
 									<span class="glyphicon glyphicon-menu-down"></span>
-                                    <h2>Questionnaire Tools</h2>
+                                    <h2>{{'QUESTIONNAIRE_MODULE.DASHBOARD.SUB_TITLE'|translate}}</h2>
                                 </span>
                             </div>
                         </div>
@@ -44,10 +44,10 @@
 											<span class="fa fa-pencil fa-sm" aria-hidden="true"></span>
 										</div>
 										<div class="panel-title">
-											<h1>Manage Questionnaires</h1>
+											<h1>{{'QUESTIONNAIRE_MODULE.DASHBOARD.MANAGE_QUESTIONNAIRES'|translate}}</h1>
 										</div>
 										<div class="panel-description">
-											<p>Create, view, update and delete questionnaires.</p>
+											<p>{{'QUESTIONNAIRE_MODULE.DASHBOARD.MANAGE_QUESTIONNAIRES_SUB'|translate}}</p>
 										</div>
 									</div>
 								</div>
@@ -63,34 +63,15 @@
 											<span class="fa fa-search fa-sm" aria-hidden="true"></span>
 										</div>
 										<div class="panel-title">
-											<h1>Manage Questions</h1>
+											<h1>{{'QUESTIONNAIRE_MODULE.DASHBOARD.MANAGE_QUESTIONS'|translate}}</h1>
 										</div>
 										<div class="panel-description">
-											<p>View and edit all the questions stored in the question bank.</p>
+											<p>{{'QUESTIONNAIRE_MODULE.DASHBOARD.MANAGE_QUESTIONNAIRES_SUB'|translate}}</p>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-
-						<!-- View Completed Questionnaire -->
-<!--						<div class="col-xs-12 col-sm-6 col-md-4">
-							<div class="panel-container animated" ng-class="{pulse: hoverCompletedQuestionnaire}" ng-mouseenter="hoverCompletedQuestionnaire=true" ng-mouseleave="hoverCompletedQuestionnaire=false" style="cursor:pointer;" ng-click="goToQuestionnaireCompleted()">
-								<div class="panel-info">
-									<div class="panel-content">
-										<div class="icon-home clearfix">
-											<span class="fa fa-check fa-sm" aria-hidden="true"></span>
-										</div>
-										<div class="panel-title">
-											<h1>Completed Questionnaires</h1>
-										</div>
-										<div class="panel-description">
-											<p>View the completed questionnaires.</p>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>-->
 						<!-- View Questions Templates -->
 						<div class="col-xs-12 col-sm-6 col-md-4">
 							<div class="panel-container animated" ng-class="{pulse: hoverTemplateQuestion}" ng-mouseenter="hoverTemplateQuestion=true" ng-mouseleave="hoverTemplateQuestion=false" style="cursor:pointer;" ng-click="goToTemplateQuestion()">
@@ -100,10 +81,10 @@
 											<span class="fa fa-question-circle-o fa-sm" aria-hidden="true"></span>
 										</div>
 										<div class="panel-title">
-											<h1>Response Types</h1>
+											<h1>{{'QUESTIONNAIRE_MODULE.DASHBOARD.RESPONSE_TYPES'|translate}}</h1>
 										</div>
 										<div class="panel-description">
-											<p>Create, view, update and delete response types.</p>
+											<p>{{'QUESTIONNAIRE_MODULE.DASHBOARD.RESPONSE_TYPES_SUB'|translate}}</p>
 										</div>
 									</div>
 								</div>
@@ -118,10 +99,10 @@
 											<span class="fa fa-cloud-upload fa-sm" aria-hidden="true"></span>
 										</div>
 										<div class="panel-title">
-											<h1>Publication Tools</h1>
+											<h1>{{'QUESTIONNAIRE_MODULE.DASHBOARD.PUBLICATION_TOOLS'|translate}}</h1>
 										</div>
 										<div class="panel-description">
-											<p>Publish and send questionnaires to patients.</p>
+											<p>{{'QUESTIONNAIRE_MODULE.DASHBOARD.PUBLICATION_TOOLS_SUB'|translate}}</p>
 										</div>
 									</div>
 								</div>
